@@ -64,13 +64,37 @@ describe "host matcher" do
     status("HTTP_HOST" => "foo.com").must_equal 404
   end
 
-  it "doesn't yield HOST" do
+  it "doesn't yield host" do
     app(:header_matchers) do |r|
       r.on :host=>"example.com" do |*args|
         args.size.to_s
       end
     end
 
+    body("HTTP_HOST" => "example.com").must_equal '0'
+  end
+
+  it "yields host if passed a regexp and opts[:host_matcher_captures] is set" do
+    app(:header_matchers) do |r|
+      r.on :host=>/\A(.*)\.example\.com\z/ do |*m|
+        m.empty? ? '0' : m[0]
+      end
+    end
+
+    body("HTTP_HOST" => "foo.example.com").must_equal '0'
+    app.opts[:host_matcher_captures] = true
+    body("HTTP_HOST" => "foo.example.com").must_equal 'foo'
+  end
+
+  it "doesn't yields host if passed a string and opts[:host_matcher_captures] is set" do
+    app(:header_matchers) do |r|
+      r.on :host=>'example.com' do |*m|
+        m.empty? ? '0' : m[0]
+      end
+    end
+
+    body("HTTP_HOST" => "example.com").must_equal '0'
+    app.opts[:host_matcher_captures] = true
     body("HTTP_HOST" => "example.com").must_equal '0'
   end
 end
